separate Error/Success Event
