# docs/swagger.json
@@ -56,6 +56,18 @@
                         "description": "Offset. Must be integer. Default 0",
                         "name": "offset",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Start time in RFC3339 format. Default NOW - 24 hours",
+                        "name": "startTime",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "End time in RFC3339 format. Default NOW",
+                        "name": "endTime",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -127,6 +139,9 @@
                 "data": {},
                 "message": {
                     "type": "string"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -139,13 +154,16 @@
                 "duration": {
                     "type": "integer"
                 },
-                "event": {
+                "name": {
                     "type": "string"
                 },
                 "projectToken": {
                     "type": "string"
                 },
                 "rawData": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 },
                 "type": {
